# Design-Patterns-in-CPP

./: CMakeLists.txt  COURSE_SOURCE_MANIFEST.md  README.md
DPC-01-pattern-implementation-lab-14/: README.md
DPC-02-pattern-implementation-lab-15/: README.md
DPC-03-dpc1-why-patterns-look-different-in-modern-c-supplemental-2/: README.md
DPC-04-dpc1-why-patterns-look-different-in-modern-c-supplemental-3/: README.md
DPC-05-dpc2-design-foundations-supplemental-2/: README.md
DPC-06-dpc1-why-patterns-look-different-in-modern-cpp/: README.md
DPC-09-dpc12-capstone-studio/: README.md
DPC-10-dpc4-strategy-and-policy-based-design-supplement/: README.md
DPC-11-dpc5-observer-and-event-flow-supplemental-2/: README.md
DPC-14-dpc6-decorator-adapter-and-facade-supplemental-3/: README.md
DPC-16-dpc7-command-and-state-supplemental-3/: README.md
DPC-18-dpc8-composite-and-iterator-supplemental-3/: README.md
DPC-19-dpc9-singleton-global-state-and-dependency-injection-supplemental-2/: README.md
DPC-22-dpc10-patterns-for-resource-management-supplemen/: README.md
DPC-24-dpc11-legacy-refactoring-lab-supplemental-3/: README.md
DPC-28-applied-studio-14-pattern-implementation-lab-14-/: README.md
DPC-29-applied-studio-15-pattern-implementation-lab-15-/: README.md
DPC-30-applied-studio-15-pattern-implementation-lab-15-/: README.md
DPC-32-applied-studio-16-pattern-implementation-lab-16-/: README.md
DPC-33-applied-studio-17-pattern-implementation-lab-17-supplemental-2/: README.md
DPC-34-applied-studio-17-pattern-implementation-lab-17-supplemental-3/: README.md
DPC1-Factories-and-Builders-Workshop/: README.md
DPC2-Strategy-and-Policy-Simulator/: README.md
DPC3-Observer-Event-Hub/: README.md
DPC4-Facade-Adapter-Import-Tool/: README.md
DPC5-Command-and-State-Editor/: README.md
DPC6-Composite-Scene-Tree/: README.md
DPC7-RAII-Resource-Manager/: README.md
DPC8-Legacy-Refactor-Capstone/: README.md
DPCX01-dpc0-setup-and-tooling-supplemental-2/: README.md
DPCX03-pattern-implementation-lab-16/: README.md
(+38 files in other folders)
